part e step 5, set up fetch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+
+    <!-- API KEY f5c49e3b3070423596c82a7a9546fec1 -->
+
+    <div class="intro">
+        <h1>News API Lab</h1>
+    </div>
+
+    <section class="option-1">
+        <div class="option-container">
+            <h2>Option 1</h2>
+            <p>Use a dropdown to search for catagories</p>
+            <select id="dropdown" class="dropdown"></select>
+            <button id="submit-button" class="button">Submit</button>
+        </div>
+
+        <div class="container">
+            <ul class="card-container" id="option-1-results"></ul>
+        </div>
+    </section>
     
+
+
 </body>
 </html>
