--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <h2>Option 1</h2>
             <p>Use a dropdown to search for different news catagories</p>
             <select id="dropdown" class="dropdown">
-                <option name="business" value="https://newsapi.org/v2/top-headlines/sources?category=businessapiKey=f5c49e3b3070423596c82a7a9546fec1">business</option>
-                <option name="sports" value="https://newsapi.org/v2/top-headlines/sources?category=sportsapiKey=f5c49e3b3070423596c82a7a9546fec1">sports</option>
-                <option name="entertainment" value="https://newsapi.org/v2/top-headlines/sources?category=entertainmentapiKey=f5c49e3b3070423596c82a7a9546fec1">entertainment</option>
-                <option name="general" value="https://newsapi.org/v2/top-headlines/sources?category=generalapiKey=f5c49e3b3070423596c82a7a9546fec1">general</option>
-                <option name="science" value="https://newsapi.org/v2/top-headlines/sources?category=scienceapiKey=f5c49e3b3070423596c82a7a9546fec1">science</option>
-                <option name="technology" value="https://newsapi.org/v2/top-headlines/sources?category=technologyapiKey=f5c49e3b3070423596c82a7a9546fec1">technology</option>
-                <option name="health" value="https://newsapi.org/v2/top-headlines/sources?category=healthapiKey=f5c49e3b3070423596c82a7a9546fec1">health</option>
+                <option name="business" value="https://newsapi.org/v2/top-headlines/sources?category=business&apiKey=f5c49e3b3070423596c82a7a9546fec1">business</option>
+                <option name="sports" value="https://newsapi.org/v2/top-headlines/sources?category=sports&apiKey=f5c49e3b3070423596c82a7a9546fec1">sports</option>
+                <option name="entertainment" value="https://newsapi.org/v2/top-headlines/sources?category=entertainment&apiKey=f5c49e3b3070423596c82a7a9546fec1">entertainment</option>
+                <option name="general" value="https://newsapi.org/v2/top-headlines/sources?category=general&apiKey=f5c49e3b3070423596c82a7a9546fec1">general</option>
+                <option name="science" value="https://newsapi.org/v2/top-headlines/sources?category=science&apiKey=f5c49e3b3070423596c82a7a9546fec1">science</option>
+                <option name="technology" value="https://newsapi.org/v2/top-headlines/sources?category=technology&apiKey=f5c49e3b3070423596c82a7a9546fec1">technology</option>
+                <option name="health" value="https://newsapi.org/v2/top-headlines/sources?category=health&apiKey=f5c49e3b3070423596c82a7a9546fec1">health</option>
             </select>
             <button id="submit-button" class="button">Submit</button>
         </div>
 
-        <div class="container">
-            <ul class="card-container" id="option-1-results"></ul>
+        <div id="result">
+
         </div>
     </section>
     
